Uploaded image for project: 'MariaDB Server'
  1. MariaDB Server
  2. MDEV-8328

Evaluation of two "!" operators depends on space in beetween

    XMLWordPrintable

Details

    Description

      The following expressions don't have the expected result (do not ignore the spaces):

       
      MariaDB [(none)]> select (! !0) = (!!0), (! !1) = (!!1);
      +----------------+----------------+
      | (! !0) = (!!0) | (! !1) = (!!1) |
      +----------------+----------------+
      |              0 |              0 |
      +----------------+----------------+
      1 row in set (0.00 sec)
       

      I would expect that the results are both 1. I would expect that the calculation does not depend on existance of spaces between ! and !.

      Changing sql_mode does not change behaviour (HIGH_NOT_PRECEDENCE).

      On a MySQL 4.1 server the result of that query is all 1.

      Attachments

        Activity

          People

            serg Sergei Golubchik
            yablacky L. Schwarz
            Votes:
            0 Vote for this issue
            Watchers:
            6 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved:

              Time Tracking

                Estimated:
                Original Estimate - Not Specified
                Not Specified
                Remaining:
                Remaining Estimate - 0d
                0d
                Logged:
                Time Spent - 1.5h
                1.5h

                Git Integration

                  Error rendering 'com.xiplink.jira.git.jira_git_plugin:git-issue-webpanel'. Please contact your Jira administrators.