MDEV-8328 Evaluation of two "!" operators depends on space in beetween

fix the lexer to backtrack when parsing
"<=", "<>", "!=", ">=", "<<", ">>", "<=>".